Modifications for OCF compliance

--- a/committees.html
+++ b/committees.html
@@ -24,7 +24,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
 
 
-  <title>Committees | Berkeley PBL</title>
+  <title>Committees | PBL at Berkeley</title>
 </head>
 
 <body data-spy="scroll" data-target="#spy" data-offset="200">
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark nav-transition fixed-top py-0" id="mainNav">
       <div class="container">
         <a class="navbar-brand-trigger" href="index.html">
-          <img src="img/logo.png" class="pbl-logo" alt="Berkeley PBL">
+          <img src="img/logo.png" class="pbl-logo" alt="PBL at Berkeley">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -319,13 +319,21 @@
   <footer>
     <div class="footer bg-dark text-center text-light py-3">
       <div class="container">
+          <a href="https://www.ocf.berkeley.edu">
+            <img src="https://www.ocf.berkeley.edu/hosting-logos/ocf-hosted-penguin-dark.svg" alt="Hosted by the OCF" style="border: 0;" />
+          </a>
+          <div class="footer-text">
+            We are a student group acting independently of the University of California. We take full responsibility for our organization and this web site.
+          </div>
+      </div>
+      <div class="container pt-3">
         <div class="social-media">
           <a class="text-light mx-1 footer-icon-link" href="https://www.facebook.com/berkeleypbl"><i class="fab fa-facebook"></i></a>
           <a class="text-light mx-1 footer-icon-link" href="https://www.instagram.com/berkeleypbl/"><i class="fab fa-instagram"></i></a>
           <a class="text-light mx-1 footer-icon-link" href="https://www.youtube.com/user/BerkeleyPBL"><i class="fab fa-youtube"></i></a>
           <a class="text-light mx-1 footer-icon-link" href="mailto:berkeleypblexecs@lists.berkeley.edu"><i class="far fa-envelope"></i></a>
         </div>
-        <div class="footer-text">© Berkeley PBL 2020</div>
+        <div class="footer-text">© PBL at Berkeley 2020</div>
         <div class="footer-text">
           Website created and designed by
           <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
