--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
 
-  <title>Berkeley PBL</title>
+  <title>PBL at Berkeley</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark nav-transition fixed-top py-0" id="mainNav">
       <div class="container">
         <a class="navbar-brand-trigger" href="index.html">
-          <img src="img/logo.png" class="pbl-logo" alt="Berkeley PBL">
+          <img src="img/logo.png" class="pbl-logo" alt="PBL at Berkeley">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
     <div class="header-spacer"></div>
     <div class="container-fluid text-light text-center hero-header-content vertical-center">
       <div class="mx-auto">
-        <h1 class="display-1 p-1" id="title">Berkeley PBL</h1>
+        <h1 class="display-1 p-1" id="title">PBL at Berkeley</h1>
         <p class="lead p-1">Future Business Leaders of America - Phi Beta Lambda</p>
         <a class="nav-link" href="apply.html">
           <button type="button" class="btn btn-light btn-lg m-1">Join Us</button>
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            Berkeley PBL's unique structure of being both a general business organization and consulting group allows for a compendious business education. Members undergo an industry-specific curriculum, building a foundation of technical skills and business acumen before joining one of our strategy consulting teams. In addition, members partake in our semester-long Internal Curriculum, an engaging series of professional development workshops in resume building, behavioral and technical interviews, case analysis, and more.
+            PBL at Berkeley's unique structure of being both a general business organization and consulting group allows for a compendious business education. Members undergo an industry-specific curriculum, building a foundation of technical skills and business acumen before joining one of our strategy consulting teams. In addition, members partake in our semester-long Internal Curriculum, an engaging series of professional development workshops in resume building, behavioral and technical interviews, case analysis, and more.
           </p>
           <a class="nav-link" href="committees.html">
             <button type="button" class="btn btn-dark btn-lg m-1">Committees</button>
@@ -139,7 +139,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            Berkeley PBL brings together a diverse group of ambitious, inventive students, dedicated to helping one another thrive in all aspects of college life. Our members achieve professional success, whether in launching their own start-up or landing their dream internship, while finding their place in a welcoming community of friends, mentors, and alumni. From collaborating on impactful consulting projects to travelling abroad together, PBL members actively pursue professional and personal passions. Come out to our Spring 2020 recruitment events to meet the officers that distinguish the PBL community!
+            PBL at Berkeley brings together a diverse group of ambitious, inventive students, dedicated to helping one another thrive in all aspects of college life. Our members achieve professional success, whether in launching their own start-up or landing their dream internship, while finding their place in a welcoming community of friends, mentors, and alumni. From collaborating on impactful consulting projects to travelling abroad together, PBL members actively pursue professional and personal passions. Come out to our Spring 2020 recruitment events to meet the officers that distinguish the PBL community!
           </p>
           <a class="nav-link" href="apply.html#timeline">
             <button type="button" class="btn btn-dark btn-lg m-1">Events</button>
@@ -152,13 +152,21 @@
   <footer>
     <div class="footer bg-dark text-center text-light py-3">
       <div class="container">
+          <a href="https://www.ocf.berkeley.edu">
+            <img src="https://www.ocf.berkeley.edu/hosting-logos/ocf-hosted-penguin-dark.svg" alt="Hosted by the OCF" style="border: 0;" />
+          </a>
+          <div class="footer-text">
+            We are a student group acting independently of the University of California. We take full responsibility for our organization and this web site.
+          </div>
+      </div>
+      <div class="container pt-3">
         <div class="social-media">
           <a class="text-light mx-1 footer-icon-link" href="https://www.facebook.com/berkeleypbl"><i class="fab fa-facebook"></i></a>
           <a class="text-light mx-1 footer-icon-link" href="https://www.instagram.com/berkeleypbl/"><i class="fab fa-instagram"></i></a>
           <a class="text-light mx-1 footer-icon-link" href="https://www.youtube.com/user/BerkeleyPBL"><i class="fab fa-youtube"></i></a>
           <a class="text-light mx-1 footer-icon-link" href="mailto:berkeleypblexecs@lists.berkeley.edu"><i class="far fa-envelope"></i></a>
         </div>
-        <div class="footer-text">© Berkeley PBL 2020</div>
+        <div class="footer-text">© PBL at Berkeley 2020</div>
         <div class="footer-text">
           Website created and designed by
           <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
