Fix critical typo

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            Berkley PBL's unique structure of being both a general business organization and consulting group allows for a compendious business education. Members undergo an industry-specific curriculum, building a foundation of technical skills and business acumen before joining one of our strategy consulting teams. In addition, members partake in our semester-long Internal Curriculum, an engaging series of professional development workshops in resume building, behavioral and technical interviews, case analysis, and more.
+            Berkeley PBL's unique structure of being both a general business organization and consulting group allows for a compendious business education. Members undergo an industry-specific curriculum, building a foundation of technical skills and business acumen before joining one of our strategy consulting teams. In addition, members partake in our semester-long Internal Curriculum, an engaging series of professional development workshops in resume building, behavioral and technical interviews, case analysis, and more.
           </p>
           <a class="nav-link" href="committees.html">
             <button type="button" class="btn btn-dark btn-lg m-1">Committees</button>
