Remove sp20 recruitment info

--- a/apply.html
+++ b/apply.html
@@ -76,10 +76,7 @@
     <div class="container-fluid text-light text-center hero-header-content vertical-center">
       <div class="mx-auto">
         <h1 class="display-1 p-1" id="title">Join Us</h1>
-        <p class="lead p-1">Submit your application by January 31<sup>st</sup> 9pm</p>
-        <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd5huzuPJO3MAthDAEJD9AW7S_j80XdtTkS-s1myF29UbDUvA/viewform">
-          <button type="button" class="btn btn-light btn-lg m-1">Apply Here</button>
-        </a>
+        <p class="lead p-1">Fall 2020 applications will go live on Sunday, August 23<sup>rd</sup></p>
       </div>
     </div>
     <div class="text-center" style="">
@@ -88,97 +85,6 @@
       </a>
     </div>
   </header>
-
-  <main>
-    <section class="container">
-      <h1 class="display-4 text-center" id="timeline">Recruitment Timeline</h1>
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <ul class="list-unstyled timeline">
-            <li class="timeline-event">
-              <div class="timeline-marker px-2 px-sm-4 order-sm-2">
-
-              </div>
-              <div class="timeline-date text-sm-center w-100 order-sm-1">
-                <h5>01/24<h5>
-              </div>
-              <div class="timeline-description order-sm-3 pb-1">
-                <h1>Infosession 1</h1>
-                <h5 class="text-muted">@ 8-10pm Barrows 166</h5>
-                <p class="mb-1">Come meet our members and learn about the amazing opportunities and community PBL has to offer! You'll have the chance to hear more about our industry-specific committees and project teams, our favorite PBL experiences, and the vast professional and personal resources available to our members.</p>
-                <a class="footer-icon-link" href="https://www.facebook.com/events/836166433500177">
-                  <i class="far fa-calendar-plus mb-3"></i>
-                </a>
-              </div>
-            </li>
-            <li class="timeline-event">
-              <div class="timeline-marker px-2 px-sm-4 order-sm-2">
-
-              </div>
-              <div class="timeline-date text-sm-center w-100 order-sm-1">
-                <h5>01/29<h5>
-              </div>
-              <div class="timeline-description order-sm-3 pb-1">
-                <h1>Infosession 2</h1>
-                <h5 class="text-muted">@ 8-10pm Barrows 126</h5>
-                <p class="mb-1">Mirroring Infosession #1, this event is another opportunity to come meet our members and learn about the amazing opportunities and community PBL has to offer! While we welcome interested applicants to mingle with our officers in any capacity, you are not required to attend both infosessions.</p>
-                <a class="footer-icon-link" href="https://www.facebook.com/events/836166430166844">
-                  <i class="far fa-calendar-plus mb-3"></i>
-                </a>
-              </div>
-            </li>
-            <li class="timeline-event">
-              <div class="timeline-marker px-2 px-sm-4 order-sm-2">
-
-              </div>
-              <div class="timeline-date text-sm-center w-100 order-sm-1">
-                <h5>01/31<h5>
-              </div>
-              <div class="timeline-description order-sm-3 pb-1">
-                <h1>Social Mixer</h1>
-                <h5 class="text-muted">@ 7-9pm Stephens Lounge</h5>
-                <p class="mb-1">Head out to MLK's Stephens Lounge for the perfect opportunity to meet and get to know our members on a more personal level before submitting your application. Whether you have a burning question about a particular committee or just want to leave a lasting impression before interviews, our Social Mixer is the perfect chance to talk about your personal or professional passions and gauge if PBL is right for you!</p>
-                <a class="footer-icon-link" href="https://www.facebook.com/events/836166436833510">
-                  <i class="far fa-calendar-plus mb-3"></i>
-                </a>
-              </div>
-            </li>
-            <li class="timeline-event">
-              <div class="timeline-marker px-2 px-sm-4 order-sm-2">
-
-              </div>
-              <div class="timeline-date text-sm-center w-100 order-sm-1">
-                <h5>01/31<h5>
-              </div>
-              <div class="timeline-description order-sm-3 pb-1">
-                <h1>Application Due</h1>
-                <h5 class="text-muted">@ 9pm</h5>
-                <p class="mb-1">Fill out your application below by 9 PM on Friday, January 31st. The application includes both personal information as well as questions to gauge interest, experiences, and personal fit. We also require additional documents such as your resume and optional supplementary material. For personal insights and tips or general questions, come talk to our officers tabling on Sproul or at any of our recruitment events!</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5huzuPJO3MAthDAEJD9AW7S_j80XdtTkS-s1myF29UbDUvA/viewform">
-                  <button type="button" class="btn btn-dark">Apply Here</button>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      </div>
-    </section>
-    <section class="container pb-5 text-center">
-    </section>
-    <hr>
-    <section class="container py-5">
-      <h1 class="display-4 text-center">Mailing List</h1>
-      <div class="row">
-        <div class="col-md-8 mx-auto text-center">
-          <p>Join our mailing list to stay up-to-date with our recruitment events and announcements!</p>
-          <a href="https://tinyurl.com/sp20interest">
-            <button type="button" class="btn btn-dark">Join Mailing List</button>
-          </a>
-        </div>
-      </div>
-    </section>
-  </main>
 
   <footer>
     <div class="footer bg-dark text-center text-light py-3">
